--- a/css/main.css
+++ b/css/main.css
@@ -52,8 +52,7 @@ ul.nav-items {
 }
 
 .nav-items li,
-.nav-items li a,
-.btn-filtros-mobile a {
+.nav-items li a{
   margin: 3px;
   padding: 3px;
   color: #03829e;
@@ -99,83 +98,6 @@ input[type="search"] {
   height: 30px;
 }
 
-/* --------------------------------------------- FILTROS --------------------------------------------- */
-.btn-filtros-mobile {
-  text-align: center;
-  font-size: 20px;
-  padding: 6px 15px;
-  background-color: #fdf7ff;
-}
-
-.btn-filtros-mobile:hover {
-  background-color: #fdf7ff;
-}
-
-.container-filtros {
-  display: none;
-  background-color: #fdf7ff;
-  align-items: center;
-}
-
-.container-filtros.show {
-  display: flex;
-  flex-direction: column;
-}
-
-.container-filtros ul li {
-  flex-wrap: wrap;
-}
-
-.container-filtros ul {
-  list-style: none;
-  padding: 0;
-}
-
-.container-filtros h4,
-.container-filtros h3 {
-  text-align: center;
-  text-decoration: underline;
-  margin: 0;
-  width: 100%;
-}
-
-.container-filtros h3 {
-  display: none;
-}
-
-.btn-aplicar-filtros,
-.btn-form-productos {
-  background-color: rgb(194, 129, 162);
-  border: none;
-  color: white;
-  padding: 10px 15px;
-  text-decoration: none;
-  margin: 10px;
-  cursor: pointer;
-}
-
-
-.btn-tabla-borrar{
-  background-color: #026278;
-}
-
-.btn-filtros-tabla, .btn-tabla-editar{
-  background-color: rgb(194, 129, 162);
-}
-
-
-.btn-tabla-borrar, .btn-filtros-tabla, .btn-tabla-editar {  
-  border: none;
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-  height: 20px;
-  border-radius: 3px;
-  margin: 1px;
-
-}
-
-
 
 /* --------------------------------------------- IMAGENES --------------------------------------------- */
 .container-imagenes {
@@ -194,7 +116,7 @@ input[type="search"] {
 }
 
 .container-imagenes a {
-  width: 45%;
+  width: 30%;
   text-align: center;
   text-decoration: none;
   color: #03829e;
@@ -220,7 +142,6 @@ input[type="search"] {
 }
 
 /* --------------------------------------------- FORMULARIO --------------------------------------------- */
-.container-formulario,
 .form-productos {
   background-color: #fdf7ff;
   padding: 20px;
@@ -229,66 +150,6 @@ input[type="search"] {
 
 .form-productos {
   text-align: center;
-}
-
-.container-formulario h2 {
-  background-color: #03829e;
-  color: #fdf7ff;
-  padding: 10px;
-  text-align: center;
-}
-
-.container-formulario > p {
-  text-align: justify;
-}
-
-.formulario,
-.captcha,
-.container-producto {
-  display: flex;
-  align-items: center;
-}
-
-.formulario .correo-formulario,
-textarea {
-  width: 100%;
-}
-
-/*----Contenedor captcha----*/
-.captcha {
-  justify-content: space-around;
-}
-
-.captcha-mensaje {
-  text-align: center;
-}
-
-.captcha h1 {
-  border: 1px solid #03829e;
-  background-color: white;
-  padding: 5px 15px;
-  margin: 10px;
-}
-
-/*----div donde aparece la validacion del captcha*/
-.validacion-captcha {
-  display: none;
-}
-
-.validacion-captcha-correcto,
-.validacion-captcha-incorrecto {
-  text-align: center;
-}
-
-.validacion-captcha-correcto {
-  border: 2px solid rgb(11, 173, 65);
-  background-color: rgb(158, 243, 186);
-  color: rgb(11, 173, 65);
-}
-.validacion-captcha-incorrecto {
-  border: 2px solid red;
-  background-color: rgb(255, 175, 175);
-  color: red;
 }
 
 input[type="text"],
@@ -388,11 +249,12 @@ ul.breadcrumb li a:hover {
 .tabla-productos,
 .form-productos {
   margin: 0px;
+  width: 100%;
 }
 
 .tabla-productos th,
 .tabla-productos td {
-  width: 20%;
+  width: 25%;
   border-bottom: 1px solid rgb(214, 156, 185);
   padding: 10px 0;
   text-align: center;
@@ -415,7 +277,6 @@ ul.breadcrumb li a:hover {
 }
 
 .tabla-productos tbody 
-
 {
   color: #e675ca;
   font-weight: bold;
@@ -444,6 +305,37 @@ ul.breadcrumb li a:hover {
 .ofertas{
   font-size: 12px;
   text-align: center;
+}
+
+.btn-form-productos {
+  background-color: rgb(194, 129, 162);
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  text-decoration: none;
+  margin: 10px;
+  cursor: pointer;
+}
+
+
+.btn-tabla-borrar{
+  background-color: #026278;
+}
+
+.btn-filtros-tabla, .btn-tabla-editar{
+  background-color: rgb(194, 129, 162);
+}
+
+
+.btn-tabla-borrar, .btn-filtros-tabla, .btn-tabla-editar {  
+  border: none;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  height: 20px;
+  border-radius: 3px;
+  margin: 1px;
+
 }
 /* ============================================== HTML PRODUCTO ============================================== */
 
@@ -487,7 +379,7 @@ ul.breadcrumb li a:hover {
   }
 
   .banner img {
-    width: 30%;
+    width: 25%;
   }
 
   /*---------------------------------------------- NAV ---------------------------------------------*/
@@ -525,41 +417,19 @@ ul.breadcrumb li a:hover {
   .container {
     display: flex;
     flex-wrap: wrap;
-  }
-
-  /*---------------------------------------------- FILTROS  ---------------------------------------------*/
-
-  .btn-filtros-mobile {
-    display: none;
-  }
-
-  .container-filtros {
-    display: flex;
-    flex-direction: column;
-    padding: 5px 10px;
-    width: 18%;
-  }
-
-  .container-filtros h3 {
-    display: flex;
-    padding: 15px 0;
     justify-content: center;
-  }
+  }  
 
   /*---------------------------------------------- IMAGENES ---------------------------------------------*/
   .container-imagenes {
     justify-content: space-around;
     align-items: center;
-    width: 80%;
   }
 
   .container-imagenes img {
     margin: 0 30px 30px 30px;
   }
 
-  .container-imagenes a {
-    width: 40%;
-  }
 
   /*---------------------------------------------- EMPRESA  ---------------------------------------------*/
   .ver-mas,
@@ -569,12 +439,6 @@ ul.breadcrumb li a:hover {
 
   p.mobile-hidden {
     display: initial;
-  }
-
-  /*---------------------------------------------- FORMULARIO ---------------------------------------------*/
-  .container-formulario {
-    width: 40%;
-    height: auto;
   }
 
   .formulario-agregar-producto {
@@ -597,9 +461,9 @@ ul.breadcrumb li a:hover {
     display: flex;
     margin-bottom: 20px;
     padding: 50px;
+    width: 100%;
   }
 
-  .tabla-productos,
   .form-productos {
     width: 50%;
     margin: 0;
