--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@ body {
   background-color: #f5d6ff;
 }
 
+.carousel{
+  justify-content: center;
+}
+
 .banner {
   display: flex;
   height: 150px;
@@ -55,6 +59,7 @@ ul.nav-items {
 .nav-items li a{
   margin: 3px;
   padding: 3px;
+  padding-top: 15px;
   color: #03829e;
   font-size: large;
   font-weight: bold;
@@ -318,7 +323,7 @@ ul.breadcrumb li a:hover {
 }
 
 
-.btn-tabla-borrar{
+.btn-tabla-ver{
   background-color: #026278;
 }
 
@@ -327,7 +332,7 @@ ul.breadcrumb li a:hover {
 }
 
 
-.btn-tabla-borrar, .btn-filtros-tabla, .btn-tabla-editar {  
+.btn-tabla-ver, .btn-filtros-tabla, .btn-tabla-editar {  
   border: none;
   color: white;
   text-decoration: none;
@@ -460,7 +465,6 @@ ul.breadcrumb li a:hover {
   /*---------------------------------------------- TABLA DE PRODUCTOS ---------------------------------------------*/
   .productos {
     margin-bottom: 20px;
-    padding: 50px;
   }
 
   .form-productos {
