--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -10,6 +10,9 @@ html,body{
     font-family: 'Numans', sans-serif;
 }
 
+.logo{
+    width: 200px;
+}
 .container{
     height: 100%;
     align-content: center;
