--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,8 @@ input[type="search"] {
 }
 
 .container-admin-productos,
-.container-admin-categorias{
+.container-admin-categorias,
+.container-admin-usuarios{
   display: flex;
   padding: 50px;
 }
@@ -152,6 +153,19 @@ input[type="search"] {
 
 .tabla-categorias h2{
   text-align: center;
+}
+
+a.favorite-true,
+a.favorite-false{
+    font-size: 30px;
+}
+
+a.favorite-false{
+    color: red;
+}
+
+a.favorite-true{
+    color: rgb(32, 189, 97);
 }
 
 /* --------------------------------------------- IMAGENES --------------------------------------------- */
@@ -306,7 +320,8 @@ ul.breadcrumb li a:hover {
 .tabla-productos,
 .form-productos,
 .tabla-categorias,
-.form-categorias {
+.form-categorias,
+.tabla-usuarios {
   margin: 0px;
   width: 100%;
   display: flex;
@@ -316,7 +331,9 @@ ul.breadcrumb li a:hover {
 .tabla-productos th,
 .tabla-productos td,
 .tabla-categorias th,
-.tabla-categorias td {
+.tabla-categorias td,
+.tabla-usuarios th,
+.tabla-usuarios td {
   width: 15%;
   border-bottom: 1px solid rgb(214, 156, 185);
   padding: 10px 0;
@@ -325,7 +342,8 @@ ul.breadcrumb li a:hover {
 }
 
 .tabla-productos th,
-.tabla-categorias th {
+.tabla-categorias th,
+.tabla-usuarios th {
   background-color: rgb(194, 129, 162);
   color: #fdf7ff;
 }
@@ -333,17 +351,20 @@ ul.breadcrumb li a:hover {
 /*---intercala los colores de las filas*/
 
 .tabla-productos tbody tr:nth-child(odd),
-.tabla-categorias tbody tr:nth-child(odd) {
+.tabla-categorias tbody tr:nth-child(odd),
+.tabla-usuarios tbody tr:nth-child(odd){
   background-color: white;
 }
 
 .tabla-productos tbody tr:nth-child(even),
-.tabla-categorias tbody tr:nth-child(even) {
+.tabla-categorias tbody tr:nth-child(even),
+.tabla-usuarios tbody tr:nth-child(even) {
   background-color: #fdf7ff;
 }
 
 .tabla-productos tbody,
-.tabla-categorias tbody{
+.tabla-categorias tbody,
+.tabla-usuarios tbody{
   color: #e675ca;
   font-weight: bold;
 }
@@ -538,8 +559,13 @@ ul.breadcrumb li a:hover {
 
   /*---------------------------------------------- TABLA DE PRODUCTOS ---------------------------------------------*/
   .productos,
-  .categorias {
+  .categorias,
+  .usuarios {
     margin-bottom: 20px;
+  }
+
+  .usuarios{
+    display: contents;
   }
 
   .form-productos,
